style.css
*, p, ul {
    margin: 0;
    padding: 0;
}

body {
    /*font-family: 'Abel', sans-serif;
    font-family: 'Parisienne', cursive; */
    font-family: 'Rajdhani', sans-serif; 
    position: relative;
}

html {
    scroll-behavior: smooth;
}
/*---------------header section----------------------*/

.header {
    position: relative;
}

.header .wavy-block {
    position: fixed;
    z-index: -1;
    background: rgb(228,86,13);
    background: linear-gradient(180deg, rgba(228,86,13,1) 0%, rgba(255,233,0,1) 100%);
}


.header .wavy-block stop:nth-child(1) {
    stop-color: #C02425;
}

.header .wavy-block stop:nth-child(2) {
    stop-color: #d6f104;
}

.header .lower-header {
    box-sizing: border-box;
    padding: 20px 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: all 0.5s ease ease-in-out;
}

.header .lower-header.fixed {
    position: fixed;
    width: 100%;
    background: #C02425;
    background: linear-gradient(184deg, rgba(207,2,2,1) 50%, rgba(214,241,4,0.8113620448179272) 100%);
    height: 100px;
}

.header .lower-header .right-blocks .menu-list li {
    display: inline-block;
    list-style: none;
    padding: 0 10px;

}

.header .lower-header .right-blocks .menu-list li a {
    text-decoration: none;
    color: #fff;
    text-shadow:0 1px #777373;
}


.header .lower-header .left-blocks{
    transition: all 0.5s ease-in-out;
}

.header .lower-header .left-blocks .logo a {
    text-decoration: none;
    font-family: 'Parisienne', cursive;
    font-size: 50px;
    color: #fff;
    font-weight: 500;  
}

.header .lower-header .left-blocks .logo img {
    height: 80px; 
    width: 120px;
}

footer {
    position: relative;
    width: 100%
}

.no-padding{
    padding: 0;
}

.no-margin {
    margin: 0;
}

.small-title {
    font-weight: 300;
}

.big-title {
    font-weight: 600;
}

.social-links {
    padding: 2px;
    margin-top: 30px;
}

.social-links i {
    font-size: 20px;
}

.social-links-block {
    text-align: center;
}

/*--------------lead Section--------------*/
.lead {
    display: flex;
    box-sizing: border-box;
    padding: 0 100px;
    align-items: center;
    background: #fff;
}

.lead .leader-right {
    width: 500px;   
}

.lead .leader-right img {
    width: 500px;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
}

.lead .leader-right img:hover {
    transform: scale(1.05, 1.10);
}

.lead .leader-left .leader span {
    font-size: 6vw;
    font-weight: 600;
    display: inline-block;
    text-shadow:0 2px #000444;
    color: rgba(241,49,11,1);
    margin: 0 2px;
    background: linear-gradient(180deg, rgba(228,86,13,1) 0%, rgba(255,233,0,1) 100%);
    /*color: linear-gradient(180deg, rgba(241,49,11,1) 0%, rgba(255,235,0,1)100%;*/
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: fill;
    transition: all 0.2s ease-in-out;
    cursor: pointer;
}

.lead .leader-left .leader span:hover {
    transform: scaleY(1.30);
}

/*--------collapsible menu section-------*/

.hamburger-menu {
    width: 20px;
    display: none;
    position: relative;
    cursor: pointer;
}

.hamburger-menu .line {
    height: 2px;
    width: 20px;
    background: #fff;
    margin: 2px;
    transition: all 0.2s ease-in-out;
}

.hamburger-menu.active .line {
    position: absolute;
}

.hamburger-menu.active .line:nth-child(2) {
    display: none;
}

.hamburger-menu.active .line:nth-child(1) {
    transform: rotate(45deg);
}

.hamburger-menu.active .line:nth-child(3) {
    transform: rotate(-45deg);
}
/*----------Contact Team-------*/
.contact {
    padding: 100px;
    display: flex;
    box-sizing: border-box;
    align-items: center;
    background: #eeeaaa;
}

.contact .contact-img {
    width: 100px;
}

.contact .contact-img img {
    width: 100px;
}

/*------Meet Team-------------*/

.about {
    padding: 100px;
    display: flex;
    box-sizing: border-box;
    align-items: center;
    background: #cdcdd4;
}

.about .team-img {
    width: 100px;
}

.about .team-img img {
    width: 100px;
}

/*------Service section-------*/

.produce {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    padding: 100px;
    box-sizing: border-box;
    background: #d4d8d4;
}

.produce h1 {
font-size: 40px;
}

.produce-groups {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.produce-groups .products {
    width: 100px;
    margin: 10px 20px; 
}

.produce-groups .products img {
    width: 100px;
    }

/*-----Bookings Section--
* {
    box-sizing: border-box;
}
-------------*/

.oversee .booking-service {
    background-color: #a2fa9a;
    color: #000;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
}

.booking-container {
    margin: 20px 0;
    
}

.booking-container select {
    background-color: #fff;
    border: 0;
    border-radius: 5px;
    font-size: 14px;
    margin: 10px;
    padding: 5px 15px 5px 15px;
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
}

.example {
    background: rgba(0, 0, 0, 0.4);
    padding: 5px 5px;
    border-radius: 5px;
    color: #fff;
    list-style-type: none;
    display: flex;
    justify-content: center;
}

.example li {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 10px;
}

.example li small {
    margin-left: 2px;
}

.example .space:not(.booked):hover {
    cursor: default;
    transform: scale(1);
}

.space {
    background-color: #444221;
    height: 18px;
    width: 18px;
    margin: 5px;
}

.space.held {
    background-color: #6feaf6;
}

.space.booked {
    background-color: #C02425;
}

.space:not(.booked):hover {
    cursor: pointer;
    transform: scale(1.3);
}

.bookable-times {
    display: flex;
}




/*---testimonials section-----*/

.slide-container {
    padding: 100px;
    background: #eee123;
    text-align: center;
}

.slide-container .mySlides .fa-quote-left {
    font-size: 50px;
}

.slide-container .mySlides .author {
    font-size: 15px;
    font-weight: 800;
}

.mySlides .fa-quote-left {
    font-size: 50px;
    color: #000444;
}

.mySlides .author{
    font-size: 15px;
    font-weight: 700;
}
/*-------media query--------*/
@media screen and (max-width: 1000px) {
    
    .lead .leader-right {
        width: 300px;
    }
    
    .lead .leader-right img {
        width: 200px;
    }

    .hamburger-menu {
        display: none;
    }

    .contact .contact-img {
        width: 100px;
    }
    
    .contact .contact-img img {
        width: 100px;
    }

    .media-gallery {
    min-width: 90%;
    }
    .btn-book-now {
    max-width: 50vw;
    }
}

@media screen and (max-width: 768px) {
    
    .lower-header .right-blocks {
        display: none;
    }
    .hamburger-menu {
        display: block;
    }

    .lower-header .left-blocks {
        display: flex;
        justify-content: space-between;
        width: 100%;
        align-items: center;
    }

    .lead {
        flex-direction: column;
        padding: 100px; 
    }
    
    .form-control {
        min-width: 70%;
        margin: 15px auto;
        text-align: center;
    }
    .btn-secondary {
    min-width: 50%;
    }
    
}



/*--------sub-header--------*/
    
    .lower-header.active {
    flex-direction: column;
    padding: 0;
    }

    .lower-header.active .left-blocks {
        background: #C02425;
        position: fixed;
        height: 50px;
        top: 0;
        padding: 0;
        box-sizing: border-box;
    }


    .lower-header.active .right-blocks {
        display: block;
        position: fixed;
        bottom: 0;
        background: #C02425;
        width: 100%;
        height: calc(100% - 50px);
    }

    .lower-header.active .right-blocks .menu-list li {
        display: block;
        text-align: center;
        margin: 10px 0;
    }

    .contact{
        flex-direction: column;
        
    }


/*---------footer and social section-------*/

    footer {
        position: relative;
        width: 100%
    }
    .footer .bottom-list {
        display: inline-flex;
        list-style: none;
        padding: 0 10px;
    }

    .footer-links {
        min-height: 70px;
        text-align: center;
        padding-top: 25px;
    }
    
    .footer a {
        text-decoration: none;
        color: #fd7709;
        font-family: 'Parisienne', cursive;
        font-weight: 600;
    }
    
    .footer-social-links i {
        padding-right: 5px;
        padding-left: 5px;
        font-size: 24px;
    }

    .social-links {
    padding: 2px;
    margin-top: 30px;
    }

    .social-links i {
    font-size: 20px;
    }

    .social-links-block {
    text-align: center;
    }

    .fa {
    font-size: 125%;
    }
    
    .fa-youtube-play {
        color: red;
    }
    
    .fa-linkedin-square {
        color: #283e4a;
    }
    
    .fa-facebook-square {
        color: #4267b2;
    }
    
    .fa-instagram {
        color: #9f36b7;
    }

/*-----------Booking Room -------*/

.oversee .booking-container {
    background-color: #441177;
    color: #fff;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
    }

/*---------------------------------------------------------- Contact us section */

.address-block {
    text-align: center;
    margin: 50px auto;
    line-height: 35px;
    }

.mapouter {
    position: relative;
    text-align: right;
    height: 300px;
    width: 300px;
    margin: 50px auto;
    }

.gmap_canvas {
    overflow: hidden;
    background: none!important;
    height: 300px;
    width: 300px;
    }

/*-------------------------------- Message form */
.message-form {
    margin: 50px 0;
    }
.message-form h2 {
    text-align: center;
    margin-bottom: 50px;
    font-weight: 500;
    color: #000;
    }
.form-control {
    width: 50%;
    margin: 15px auto;
    font-family: "poppins", sans-serif;
    font-weight: 300;
    color: #aaa;
    }
.form-group {
    text-align: center;
    font-family: "poppins", sans-serif;
    font-weight: 400;
    color: #000;
    }

.btn-book-now {
    font-weight: 500;
    font-size: 20px;
    position: center;
    max-width: 33vw;
    background-color: rgb(30, 173, 1);
    margin: 50px auto;
    color: #fff;
    }
.btn-secondary {
    margin-top: 20px;
    background-color: #ff9d00;
    border-color: #ff9d00;
    width: 30%;
    }
/*---------------------------------------------------------- Modal */

.modal-title {
    margin-left: auto;
    padding-left: 33px;
    }

